[package]
name = "again"
version = "0.1.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "wasm-compatible retry util for std library futures"
edition = "2018"
documentation = "https://docs.rs/again"
homepage = "https://github.com/softprops/again"
repository = "https://github.com/softprops/again"
keywords = ["retry", "futures", "futures-retry"]
license = "MIT"
readme = "README.md"
categories = [
  "asynchronous",
  "wasm",
  "web-programming"
]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["log", "rand"]
wasm-bindgen = ["rand/wasm-bindgen"]
stdweb = ["rand/stdweb"]

[dependencies]
log = { version = "0.4", optional = true }
rand = { version = "0.7", optional = true }
wasm-timer = "0.2"

[dev-dependencies]
pretty_env_logger = "0.4"
reqwest = "0.10"
tokio = { version = "0.2", features = ["rt-threaded","macros"] }
