[package]
name = "again"
version = "0.1.2"
authors = ["softprops <d.tangren@gmail.com>"]
description = "wasm-compatible retry util for std library futures"
edition = "2018"
documentation = "https://docs.rs/again"
homepage = "https://github.com/softprops/again"
repository = "https://github.com/softprops/again"
keywords = ["retry", "futures", "futures-retry"]
license = "MIT"
readme = "README.md"
categories = [
  "asynchronous",
  "wasm",
  "web-programming"
]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["log", "rand"]
wasm-bindgen = ["futures-timer/wasm-bindgen"]

[dependencies]
log = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
futures-timer = { version = "3" }

[dev-dependencies]
approx = "0.5"
pretty_env_logger = "0.4"
reqwest = "0.11"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
